<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Musix Pro</string>
    <string name="favorite">Favorite</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="browse_genres">Genres</string>
    <string name="browse_genre_subtitle">Songs by genre</string>
    <string name="browse_musics_by_genre_subtitle">%1$s songs</string>
    <string name="random_queue_title">Random music</string>
    <string name="error_no_connection">Cannot connect to server. Please, check your Internet connectivity.</string>
    <string name="error_loading_media">Error Loading Media</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="currently_playing_song">Song currently playing</string>
    <string name="currently_playing">Currently playing %1$s by %2$s</string>
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>
    <string name="play_item">Play item</string>
    <string name="play_pause">play or pause</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="touch_to_cast">Touch to connect to a Google Cast device</string>
    <string name="cast_application_id">CC1AD845</string>
    <string name="home_title">Home</string>
    <string name="related_content_header">You may also like</string>
    <string name="action_listen">Listen</string>
    <string name="open_content_drawer">Open the main menu</string>
    <string name="close_content_drawer">Close the main menu</string>
    <string name="placeholder_message">\nMusix Pro\n\nVersion 1.0\n\nDeveloped by Shubham Sharma</string>
    <string name="drawer_allmusic_title">All Music</string>
    <string name="drawer_playlists_title">Details</string>
    <string name="now_playing">Now Playing</string>
    <string name="background_image_str">Background image for album art</string>
    <string name="search_queue_title">Search results</string>
    <string name="no_search_results">No search results.</string>
    <string name="loading">Loading…</string>
    <string name="media_route_menu_title">Play on…</string>
    <string name="widget_provider">Musix Pro</string>
    <string name="receiver_label">Musix Pro</string>
    <string name="problem_loading_list">Restart the Music Player</string>
    <string name="connectivity_error">Connectivity error!</string>
    <string name="nav_header">Username</string>
    <string name="welcome" translatable="false">Welcome to Musix Pro</string>
    <string name="by" translatable="false">by Shubham Sharma</string>
    <string name="header_item"> song(s) in this playlist</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="lyrics_not_available">Sorry no lyrics available currently</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad">Displaying an Advertisement</string>
</resources>
