<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:id="@+id/container"
    android:layout_height="match_parent"
    android:background="#c81b3de6"
    android:paddingStart="@dimen/playback_controls_padding"
    android:paddingEnd="@dimen/playback_controls_padding"

    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/albumArt"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/currently_playing_song"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_launcher" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/playback_controls_albumart_horizontal_margin"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/title"
            android:text="@string/welcome"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/currently_playing_song"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary"/>
        <TextView
            android:id="@+id/artist"
            android:text="@string/by"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/currently_playing_artist"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/play"
        android:src="@drawable/ic_play_arrow_black_36dp"
        android:tint="@color/bt_accent"
        android:contentDescription="@string/play"
        android:background="#00ffffff"
        android:visibility="gone" />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pause"
        android:src="@drawable/ic_pause_black_36dp"
        android:tint="@color/bt_accent"
        android:contentDescription="@string/pause"
        android:background="#00ffffff"
        android:visibility="gone" />




</LinearLayout>
